--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "core-js": "^3.1.2",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
@@ -32,7 +33,10 @@
       "eslint:recommended"
     ],
     "rules": {
-      "no-mixed-spaces-and-tabs": ["error", "smart-tabs"],
+      "no-mixed-spaces-and-tabs": [
+        "error",
+        "smart-tabs"
+      ],
       "no-console": "off"
     },
     "parserOptions": {
