--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.0",
     "core-js": "^3.1.2",
     "element-ui": "^2.12.0",
+    "node-sass": "^4.14.1",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.1"
@@ -22,6 +23,7 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "sass-loader": "^10.0.2",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
