--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "babel-core": "^6.26.3",
+    "babel-types": "^6.26.0",
     "core-js": "^3.1.2",
     "element-ui": "^2.12.0",
     "node-sass": "^4.14.1",
@@ -21,6 +23,7 @@
     "@vue/cli-plugin-eslint": "^4.0.0",
     "@vue/cli-service": "^4.0.0",
     "babel-eslint": "^10.0.1",
+    "babel-plugin-component": "^1.1.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "hbg-sn-o": "^1.0.3",
