--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
 .DS_Store
 node_modules
 /dist
+.history
+
+# other files
+package-lock.json
+
 
 # local env files
 .env.local
@@ -10,6 +15,7 @@ node_modules
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 
 # Editor directories and files
 .idea
