--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.6.5",
+    "element-ui": "^2.15.1",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0",
-    "axios": "^0.19.2"
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@types/jest": "^24.0.19",
